--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "sw-precache": "^4.0.0"
   },
   "dependencies": {
+    "periodic-table": "0.0.6",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   },
