Added app-name, .editorconfig and a few lint changes

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "App Short Name",
-  "name": "App Name",
+  "short_name": "elementeum",
+  "name": "elementeum",
   "icons": [{}],
   "display": "standalone",
   "orientation": "portrait",
