--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run support-pwa && react-scripts build",
+    "build": "react-scripts build && npm run support-pwa",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "bash deploy.sh",
