--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
   "display": "standalone",
   "orientation": "portrait",
   "start_url": "./index.html",
-  "theme_color": "#2c2e38",
+  "theme_color": "#383f4c",
   "background_color": "#3c4455"
 }
